# Testaiownik

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: testaiownik-AutoDeployTrigger-5619ea43-f9b5-4624-811d-11305dd19990.yml  testaiownik-frontend-AutoDeployTrigger-679c7538-bc2b-4316-99b1-f7e3aac3d040.yml
IaaC/: README.md  cleanup.ps1  deploy.ps1  main.bicep
IaaC/modules/: main-resources.bicep
IaaC/parameters/: dev.bicepparam  prod.bicepparam
src/Testaiownik/: main.py  main_quiz.py
src/Testaiownik/Agent/: __init__.py  graph.py  main.py  models.py  nodes.py  runner.py  state.py
src/Testaiownik/Agent/Quiz/: __init__.py  graph.py  models.py  nodes.py  state.py
src/Testaiownik/Agent/Shared/: __init__.py  models.py
src/Testaiownik/Agent/TopicSelection/: __init__.py  graph.py  models.py  nodes.py  state.py
src/Testaiownik/AzureModels/: __init__.py  models.py
src/Testaiownik/Backend/: Dockerfile  __init__.py  docker-compose.yml  main.py  run.py
src/Testaiownik/Backend/api/: __init__.py  collections.py  documents.py  quiz.py  system.py  topics.py
src/Testaiownik/Frontend/: Dockerfile  generate_quiz.py  main.py
src/Testaiownik/RAG/: Retriever.py  __init__.py  file_processor.py  pdf_processor.py  qdrant_manager.py
src/Testaiownik/config/: config.py
src/Testaiownik/test_files/: testdocx.docx
src/Testaiownik/tests/: conftest.py  test_RAGretriever.py  test_analyze_documents.py  test_data_processing.py  test_file_processor.py  test_process_feedback.py  test_qdrant_manager.py  test_request_feedback.py  test_route_next.py
src/Testaiownik/utils/: __init__.py  logger.py
test_files/: testtxt.txt
tests/: conftest.py
tests/Agent/Quiz/: test_models.py  test_nodes.py  test_state.py
tests/Agent/TopicSelection/: test_analyze_documents.py  test_data_processing.py  test_process_feedback.py  test_request_feedback.py  test_route_next.py
tests/Backend/api/: test_collections.py  test_documents.py  test_quiz.py  test_system.py  test_topics.py
tests/Backend/services/: test_document_service.py  test_quiz_service.py  test_topic_service.py
tests/RAG/: test_RAGretriever.py  test_file_processor.py  test_qdrant_manager.py
(+24 files in other folders)
