[project]
name = "testaiownik"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "dotenv>=0.9.9",
  "langchain>=0.3.25",
  "langchain-openai>=0.3.21",
  "langgraph>=0.4.8",
  "logging>=0.4.9.6",
  "numpy>=2.3.0",
  "opencensus-ext-azure>=1.1.15",
  "pathlib>=1.0.1",
  "pydantic>=2.11.5",
  "requests>=2.32.3",
  "trustcall>=0.0.39",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.0",
    "ruff>=0.11.13",
]
